@@ -423,6 +423,10 @@ void EvtPythiaEngine::updateParticleLists() {
   int iPDL;
   int nPDL = EvtPDL::entries();
 
+  // Reset the _addedPDGCodes map that keeps track
+  // of any new particles added to the Pythia input data stream
+  _addedPDGCodes.clear();
+
   for (iPDL = 0; iPDL < nPDL; iPDL++) {
 
     EvtId particleId = EvtPDL::getEntry(iPDL);
@@ -452,10 +456,15 @@ void EvtPythiaEngine::updateParticleLists() {
 
       // Find the Pythia particle name given the standard PDG code integer
       std::string dataName = _theParticleData.name(PDGCode);
-      if (dataName == " ") {
+      bool alreadyStored(false);
+      if (_addedPDGCodes.find(abs(PDGCode)) != _addedPDGCodes.end()) {alreadyStored = true;}
 
-	// Particle does not exist in the Pythia database. Create a new particle.
-	// Then create the new decay modes.
+      report(INFO,"EvtGen")<<"AddedPDGCodes for "<<PDGCode<<" = "<<int(alreadyStored)<<endl;
+
+      if (dataName == " " && alreadyStored == false) {
+
+        // Particle and its antiparticle does not exist in the Pythia database.
+	// Create a new particle, then create the new decay modes.
 	this->createPythiaParticle(particleId, PDGCode);
 
       } else {
@@ -723,6 +732,13 @@ void EvtPythiaEngine::createPythiaParticle(EvtId& particleId, int PDGCode) {
   
   // Pass this information to Pythia
   _thePythiaGenerator->readString(oss.str());
+
+  // Also store the absolute value of the PDG entry
+  // to keep track of which new particles have been added,
+  // which also automatically includes the anti-particle.
+  // We need to avoid creating new anti-particles when
+  // they already exist when the particle was added.
+  _addedPDGCodes[absPDGCode] = 1;
 
 }
 
