@@ -4,6 +4,12 @@
 //
 //===========================================================================
 
+19th September 2013 John Back
+     Modified EvtGenExternal/EvtPythiaEngine to keep track of any new 
+     particles that are added to the default Pythia database to avoid
+     duplicating particle/anti-particle entries that could override
+     previously defined Pythia decay chains.
+
 18th September 2013 John Back
      Added Mac OS flags for the configure script and src/Makefile.
 
